# src/auth/controller/http_user.go
@@ -1,6 +1,7 @@
 package controller
 
 import (
+	"fmt"
 	"net/http"
 
 	"github.com/CPU-commits/Template_Go-EventDriven/src/auth/dto"
@@ -30,7 +31,7 @@ func NewUserHttpController(bus bus.Bus) *HttpUserController {
 //
 //	@Summary	Actualizar el correo electronico
 //	@Tags		auth
-//	@Param		newEmail	body dto.UpdateAuthEmailDTO	false	"nuevo email"
+//	@Param		newEmail	body	dto.UpdateAuthEmailDTO	false	"nuevo email"
 //	@Success	200
 //	@Failure	503	object	utils.ProblemDetails	"Error con la base de datos"
 //	@Router		/api/auth/email [patch]
@@ -55,8 +56,8 @@ func (httpUser *HttpUserController) UpdateEmail(c *gin.Context) {
 //	@Summary	Actualizar informacion del usuario, name || phone
 //	@Tags		auth
 //	@Success	200
-//	@Param UserUpdateData body dto.UserUpdateData false "name || phone"
-//	@Failure	503	object	utils.ProblemDetails	"Error con la base de datos"
+//	@Param		UserUpdateData	body	dto.UserUpdateData		false	"name || phone"
+//	@Failure	503				object	utils.ProblemDetails	"Error con la base de datos"
 //	@Router		/api/auth/user [patch]
 func (httpUser *HttpUserController) UpdateUser(c *gin.Context) {
 	var userUpdateData *dto.UserUpdateData
@@ -67,6 +68,32 @@ func (httpUser *HttpUserController) UpdateUser(c *gin.Context) {
 	claims, _ := utils.NewClaimsFromContext(c)
 
 	if err := httpUser.userService.UserUpdate(claims.ID, *userUpdateData); err != nil {
+		utils.ResFromErr(c, err)
+		return
+	}
+
+	c.JSON(http.StatusOK, nil)
+}
+
+// IsOwner godoc
+//
+//	@Summary	Ver si el usuario es owner
+//	@Tags		auth
+//	@Success	200
+//	@Param		id			query	string					true	"idUser"
+//	@Param		userName	query	string					true	"userName"
+//	@Failure	503			object	utils.ProblemDetails	"Error con la base de datos"
+//	@Router		/api/auth [Get]
+func (httpUser *HttpUserController) IsOwner(c *gin.Context) {
+	var Query *dto.QueryIsOwner
+
+	if err := c.ShouldBindQuery(&Query); err != nil {
+		utils.ResErrValidators(c, err)
+		return
+	}
+	claims, _ := utils.NewClaimsFromContext(c)
+	fmt.Printf("claims.ID: %v\n", claims.ID)
+	if err := httpUser.userService.IsOwner(claims.ID, *Query); err != nil {
 		utils.ResFromErr(c, err)
 		return
 	}
